force-app/main/default/objects/Service_Event__c/Service_Event__c.object-meta.xml
<CustomObject>
    <label>Service Event</label>
    <nameField>
        <displayFormat>SEVT-{000000}</displayFormat>
        <label>Service Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>