force-app/main/default/objects/Service_Event__c/fields/ContinuingService__c.field-meta.xml
<CustomField>
    <fullName>ContinuingService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Continuing Service record</description>
    <label>Continuing Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Discontinuing Services</relationshipLabel>
    <relationshipName>Service_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>