force-app/main/default/objects/Service_Event__c/validationRules/SE_ServiceCombineLock.validationRule-meta.xml
<ValidationRule>
    <fullName>SE_ServiceCombineLock</fullName>
    <active>true</active>
    <description>This used to lock the record during the service combine process.</description>
    <errorConditionFormula>Service__r.GPMS_CombineLock__c</errorConditionFormula>
    <errorMessage>This service is being combined. Related records cannot be changed.</errorMessage>
</ValidationRule>